--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    //Versions for dependency
+    ext.androidx_base = "1.1.0"
+    ext.androidx_lifecycle = "2.2.0"
     ext.kotlin_version = "1.3.72"
     ext.koin_version = "2.1.5"
     repositories {
