--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.0"
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
 
     defaultConfig {
@@ -22,7 +22,8 @@ android {
 
     buildTypes {
         all{
-            buildConfigField "String", "API_URL", "\"https://api.openweathermap.org/data/2.5/\""
+            buildConfigField "String", "API_URL", "\"https://samples.openweathermap.org/data/2.5/\""
+            buildConfigField "String", "API_KEY", "\"b1b15e88fa797225412429c1c50c122a1\""
         }
         release {
             minifyEnabled false
